test/1.2/errors/T_EASSIGN_22.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

// bug 5090
method init {
    local double i;
    /// ERROR EASSIGN
    i * 1 = 5;
}
